--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,23 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
+        "drupal/admin_toolbar": "^1.19",
+        "drupal/admin_toolbar_tools": "^1.19",
+        "drupal/calendar": "1.x-dev",
+        "drupal/conditional_fields": "1.x-dev",
         "drupal/console": "~1.0",
         "drupal/core": "~8.0",
+        "drupal/devel": "^1.0@RC",
+        "drupal/field_group": "^1.0@RC",
+        "drupal/merci": "2.x-dev",
+        "drupal/module_filter": "^3.0",
+        "drupal/replicate": "1.x-dev",
+        "drupal/rng": "^1.5",
+        "drupal/rng_contact": "^1.0@beta",
+        "drupal/rules": "^3.0@alpha",
+        "drupal/veoa": "^1.0",
+        "drupal/views_advanced_routing": "^1.0@RC",
+        "drupal/views_templates": "^1.0@alpha",
         "drush/drush": "~8.0",
         "webflo/drupal-finder": "^0.2.1",
         "webmozart/path-util": "^2.3"
